Fix KotlinPluginSmokeTest without ignoring iterations for Java 17